[metadata]
name = scsqc
summary = Cookie cutter python module with Vagrant test environment
description-file = README.md
author = Venkat Kaushik
author-email = higgsmass@gmail.com
classifier =
    Environment :: Plugins 
    Intended Audience :: Information Technology
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[files]
packages = scsqc
extra_files =
    LICENSE

[backwards_compat]
zip-safe = False
tests-require = nose

[entry_points]

[test]
test-suite = nose.collector

